# pressure

./: .editorconfig  SPEC.md  TODO.md  flake.nix  pressure-lang.cabal  pressure-language.cabal
app/: Main.hs
class_examples/parserV0/parserV0/CSV/: csv1.hs  csv2.hs  test.csv
class_examples/parserV0/parserV0/toyProgrammingLanguage/: Lexer.hs
code_examples/: fnmain.ps  fnmain_tokens.txt  merge_sort.ps  mergesort_tokens.txt  p1.ps  p2.ps  p3INCOMPLETO.ps  prob02.ps  problem_4.ps
code_examples/structs/: members.ps  struct_test.ps
src/: Ast.hs  Eval.hs  Lang.hs  Lexer.hs  Lexer.x  Parser.hs  Parser.y  Parser1.hs
src/Ast/: Syntax.hs  Typecheck.hs
src/ParserHelpers/: PrettyPrint.hs
src/Pressure/: Builtins.hs
src/Pressure/Interpreter/: Value.hs
src/Pressure/Language/: Parser.y
src/Pressure/Typechecker/: Check.hs
test/: AstTest.hs  LexerTest.hs  ParserTest.hs  TestUtil.hs  TypeTest.hs
test/Ast/: ArithTest.hs  AssignTest.hs  ControlTest.hs  ErrorTest.hs  FunctionTest.hs  LiteralTest.hs
test/Lexer/: LexerTest.hs
test/Parser/: ErrorTest.hs  ProgramTest.hs  ReplTest.hs
test/Pressure/: TypecheckerTest.hs
test/Pressure/Interpreter/: AssignTest.hs
test/Pressure/Language/Ast/: ControlTest.hs
test/Pressure/Typechecker/: ControlTest.hs  StructTest.hs
