cabal-version:      3.0
name:               pressure-language
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             ArthurJAS
maintainer:         arthurjoskeete@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    exposed-modules:
        Parser,
        Lexer,
        ParserHelpers.Terminals,
        ParserHelpers.PrettyPrint,
    hs-source-dirs:
        src
    build-depends:
        base,
        parsec,
        array
    default-language: Haskell2010

executable pressure-language
    main-is:
        Main.hs
    hs-source-dirs:
        app
    build-depends:
        base,
        pressure-language
    default-language: Haskell2010
